// proto/job/v1/job_service.proto
syntax = "proto3";

package job.v1;
option go_package = "github.com/cybergarage/go-job/api/job/v1";

import "google/protobuf/timestamp.proto";

//////////////////////////////
// Version
// Basic information: 1-10
// Execution information: 11-20
//////////////////////////////

message VersionRequest {  
}

message VersionResponse {
  string version = 1;
  string api_version = 2;
}

//////////////////////////////
// Job state enumeration
//////////////////////////////

enum JobState {
  JOB_STATE_UNSET = 0;
  JOB_STATE_CREATED = 1;
  JOB_STATE_SCHEDULED = 2;
  JOB_STATE_PROCESSING = 4;
  JOB_STATE_CANCELLED = 8;
  JOB_STATE_TIMED_OUT = 16;
  JOB_STATE_COMPLETED = 32;
  JOB_STATE_TERMINATED = 64;
}

//////////////////////////////
// Job representation
// Basic information: 1-10
// Execution information: 11-20
//////////////////////////////

message Job {
  // Kind of the job (e.g., "email", "data_processing")
  string kind = 1;  
  // Description of the job
  string description = 2;
  // Registered at timestamp
  google.protobuf.Timestamp registered_at = 3;

  // Schedule using cron expression
  optional string cron_spec = 11;
  // Schedule at a specific time
  optional google.protobuf.Timestamp schedule_at = 12;
}

//////////////////////////////
// Job instance representation
// Basic information: 1-10
// Execution information: 11-20
// Timestamps: 21-30
// Runtime information: 31-40
//////////////////////////////

message JobInstance {
  // Kind of the job (e.g., "email", "data_processing")
  string kind = 1;
  // Unique instance identifier
  string uuid = 2;

  // Current state
  JobState state =11;  
  // Job arguments
  repeated string arguments = 12;
  // Execution results (if completed)
  repeated string results = 13;  
  // Error information (if terminated)
  optional string error = 14;

  optional google.protobuf.Timestamp created_at = 21;
  optional google.protobuf.Timestamp scheduled_at = 22;
  optional google.protobuf.Timestamp processed_at = 23;
  optional google.protobuf.Timestamp completed_at = 24;
  optional google.protobuf.Timestamp terminated_at = 25;
  optional google.protobuf.Timestamp canceled_at = 26;
  optional google.protobuf.Timestamp timed_out_at = 27;

  // Total attempt count (initial execution + retries)
  optional int32 attempts = 31;
}

//////////////////////////////
// ScheduleJobRequest/Response
// Basic information: 1-10
// Execution options: 11-20
//////////////////////////////

message ScheduleJobRequest {
  // Kind to schedule (must be pre-registered)
  string kind = 1;  

  // Arguments to pass to the job executor
  repeated string arguments = 11;
  // Priority (lower values = higher priority; -1 means unset)
  optional int32 priority = 12;
}

message ScheduleJobResponse {
  // Scheduled job instance
  JobInstance instance = 1;
}

//////////////////////////////
// ListRegisteredJobsRequest/Response
//////////////////////////////

message ListRegisteredJobsRequest {
}

message ListRegisteredJobsResponse {
  // List of registered jobs
  repeated Job jobs = 1;
}

//////////////////////////////
// Query
//////////////////////////////

message Query {
  // Filter by job kind
  optional string kind = 1;
  // Filter by job instance UUID
  optional string uuid = 2;
  // Filter by job state
  optional JobState state = 3;
}

//////////////////////////////
// LookupInstancesRequest/Response
//////////////////////////////

message LookupInstancesRequest {
  // Lookup query
  Query query = 1;
}

message LookupInstancesResponse {
  // List of job instances
  repeated JobInstance instances = 1;
}

//////////////////////////////
// CancelInstancesRequest/Response
//////////////////////////////

message CancelInstancesRequest {
  // Lookup query
  Query query = 1;
}

message CancelInstancesResponse {
  // List of job instances
  repeated JobInstance instances = 1;
}

//////////////////////////////
// JobService representation
//////////////////////////////

// JobService provides job scheduling and management capabilities.
// This service allows you to register jobs, schedule them for execution,
// and monitor their progress through various states.
service JobService {
  // GetVersion returns the service version information.
  rpc GetVersion(VersionRequest) returns (VersionResponse);
  
  // ScheduleJob schedules a job for execution with the specified parameters.
  // The job must be pre-registered in the system before it can be scheduled.
  rpc ScheduleJob(ScheduleJobRequest) returns (ScheduleJobResponse);
  
  // ListRegisteredJobs returns all currently registered jobs in the system.
  rpc ListRegisteredJobs(ListRegisteredJobsRequest) returns (ListRegisteredJobsResponse);
  
  // LookupInstances searches for job instances based on the provided query criteria.
  rpc LookupInstances(LookupInstancesRequest) returns (LookupInstancesResponse);

  // CancelInstances cancels for job instances based on the provided query criteria.
  rpc CancelInstances(CancelInstancesRequest) returns (CancelInstancesResponse);
}
