@startuml

State Initial {
[*] --> Created : Job created
}

State Active {
Created --> Scheduled : Job queued
Scheduled --> Processing : Job started
}

State Final {
Processing --> Completed : Job completed successfully
Processing --> Terminated : Job encountered an error
Terminated --> Scheduled : [if recurring or recurring] Reschedule
Completed --> Scheduled : [if recurring] Reschedule

Processing --> Cancelled : Job was canceled
Processing --> TimedOut : Job exceeded time limit
TimedOut --> Scheduled : [if retriable] Reschedule
}

Terminated --> [*] : [if not retriable and not recurring]
Completed --> [*] : [if not recurring]
Cancelled --> [*]
TimedOut --> [*] : [if not retriable and not recurring]

@enduml